RESOLVED FIXED229303
Setting window.location.href to an invalid URL should throw a TypeError
https://bugs.webkit.org/show_bug.cgi?id=229303
Summary Setting window.location.href to an invalid URL should throw a TypeError
Alex Christensen
Reported 2021-08-19 12:49:14 PDT
Setting window.location.href to an invalid URL should throw a TypeError
Attachments
Patch (36.46 KB, patch)
2021-08-19 12:50 PDT, Alex Christensen
no flags
Patch (41.90 KB, patch)
2021-08-21 09:40 PDT, Alex Christensen
no flags
Patch (46.06 KB, patch)
2021-08-23 12:20 PDT, Alex Christensen
no flags
Patch (47.37 KB, patch)
2021-08-23 14:10 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-08-19 12:50:01 PDT
Alex Christensen
Comment 2 2021-08-21 09:40:13 PDT
Chris Dumez
Comment 3 2021-08-23 07:43:18 PDT
red bubbles.
Alex Christensen
Comment 4 2021-08-23 12:20:32 PDT
Chris Dumez
Comment 5 2021-08-23 13:18:17 PDT
Comment on attachment 436223 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436223&action=review > Source/WebCore/ChangeLog:8 > + This matches Firefox and the specification Looks like Chrome does throw an exception, right? Just not the right exception type? If so, the compatibility risk does seem low. > Source/WebCore/page/Location.cpp:281 > + return Exception { TypeError, "Invalid URL" }; nit: "Invalid URL"_s
Alex Christensen
Comment 6 2021-08-23 14:10:12 PDT
Alex Christensen
Comment 7 2021-08-23 14:10:41 PDT
(In reply to Chris Dumez from comment #5) > > Source/WebCore/ChangeLog:8 > > + This matches Firefox and the specification > > Looks like Chrome does throw an exception, right? Just not the right > exception type? Correct. I added this to the ChangeLog.
EWS
Comment 8 2021-08-23 14:39:45 PDT
Committed r281472 (240851@main): <https://commits.webkit.org/240851@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436235 [details].
Radar WebKit Bug Importer
Comment 9 2021-08-23 14:42:32 PDT
Note You need to log in before you can comment on or make changes to this bug.