Setting window.location.href to an invalid URL should throw a TypeError https://bugs.webkit.org/show_bug.cgi?id=229303

Patch by Alex Christensen <achristensen@webkit.org> on 2021-08-23
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/url/failure-expected.txt:

Source/WebCore:

This matches Firefox and the specification, and Chrome also throws an exception in this case.

* page/Location.cpp:
(WebCore::Location::setLocation):

LayoutTests:

* fast/dom/location-new-window-no-crash-expected.txt:
* fast/dom/location-new-window-no-crash.html:
* fast/loader/file-URL-with-port-number.html:
* fast/loader/location-port.html:
* fast/loader/redirect-to-invalid-url-using-javascript-disallowed-expected.txt:
* fast/loader/redirect-to-invalid-url-using-javascript-disallowed.html:
* fast/url/navigate-non-ascii.html:
* platform/ios-wk1/fast/loader/redirect-to-invalid-url-using-javascript-disallowed-expected.txt: Removed.
* platform/mac-wk1/fast/loader/redirect-to-invalid-url-using-javascript-disallowed-expected.txt: Removed.

Canonical link: https://commits.webkit.org/240851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281472 268f45cc-cd09-0410-ab3c-d52691b4dbfc